lss/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    FALSE
    LPAREN
    NEWLINE
    NOT_EQUALS
    RPAREN
    TRUE
    UTILIZADORES

Grammar

Rule 0     S' -> comando
Rule 1     comando -> reserva
Rule 2     comando -> cancelamento
Rule 3     comando -> consulta
Rule 4     comando -> disponibilidade
Rule 5     comando -> batch
Rule 6     comando -> definicao
Rule 7     comando -> if_statement
Rule 8     reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME
Rule 9     cancelamento -> CANCELAR COLON RESERVA_ID COLON NUMBER
Rule 10    consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID
Rule 11    disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME
Rule 12    batch -> BATCH COLON lista_comandos
Rule 13    lista_comandos -> comando_batch comando_batch
Rule 14    lista_comandos -> lista_comandos comando_batch
Rule 15    comando_batch -> reserva
Rule 16    comando_batch -> cancelamento
Rule 17    comando_batch -> consulta
Rule 18    comando_batch -> disponibilidade
Rule 19    definicao -> DEF ID
Rule 20    if_statement -> IF expressao ELSE ID
Rule 21    expressao -> NOT expressao
Rule 22    expressao -> ID EQUALS ID
Rule 23    expressao -> ID GREATER NUMBER
Rule 24    expressao -> ID LESS NUMBER
Rule 25    expressao -> ID GREATER_EQUAL NUMBER
Rule 26    expressao -> ID LESS_EQUAL NUMBER
Rule 27    expressao -> expressao AND expressao
Rule 28    expressao -> expressao OR expressao

Terminals, with rules where they appear

AND                  : 27
BATCH                : 12
CANCELAR             : 9
COLON                : 8 8 8 8 8 8 9 9 10 10 10 10 11 11 11 11 11 12
COMMA                : 
CONSULTA             : 10
DATA                 : 8 11
DATE                 : 8 10 11
DEF                  : 19
DISPONIBILIDADE      : 11
ELSE                 : 20
EQUALS               : 22
ESPACO               : 8
FALSE                : 
FILTRO               : 10
GREATER              : 23
GREATER_EQUAL        : 25
HORA_FIM             : 8 11
HORA_INICIO          : 8 11
ID                   : 8 10 10 11 19 20 22 22 23 24 25 26
IF                   : 20
LESS                 : 24
LESS_EQUAL           : 26
LPAREN               : 
NEWLINE              : 
NOT                  : 21
NOT_EQUALS           : 
NUMBER               : 9 23 24 25 26
OR                   : 28
PERIODO              : 10
RESERVAR             : 8
RESERVA_ID           : 9
RPAREN               : 
STRING               : 8
TIME                 : 8 8 11 11
TIPO                 : 8 10 11
TRUE                 : 
UTILIZADORES         : 
error                : 

Nonterminals, with rules where they appear

batch                : 5
cancelamento         : 2 16
comando              : 0
comando_batch        : 13 13 14
consulta             : 3 17
definicao            : 6
disponibilidade      : 4 18
expressao            : 20 21 27 27 28 28
if_statement         : 7
lista_comandos       : 12 14
reserva              : 1 15

Parsing method: LALR

state 0

    (0) S' -> . comando
    (1) comando -> . reserva
    (2) comando -> . cancelamento
    (3) comando -> . consulta
    (4) comando -> . disponibilidade
    (5) comando -> . batch
    (6) comando -> . definicao
    (7) comando -> . if_statement
    (8) reserva -> . RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME
    (9) cancelamento -> . CANCELAR COLON RESERVA_ID COLON NUMBER
    (10) consulta -> . CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID
    (11) disponibilidade -> . DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME
    (12) batch -> . BATCH COLON lista_comandos
    (19) definicao -> . DEF ID
    (20) if_statement -> . IF expressao ELSE ID

    RESERVAR        shift and go to state 9
    CANCELAR        shift and go to state 10
    CONSULTA        shift and go to state 11
    DISPONIBILIDADE shift and go to state 12
    BATCH           shift and go to state 13
    DEF             shift and go to state 14
    IF              shift and go to state 15

    comando                        shift and go to state 1
    reserva                        shift and go to state 2
    cancelamento                   shift and go to state 3
    consulta                       shift and go to state 4
    disponibilidade                shift and go to state 5
    batch                          shift and go to state 6
    definicao                      shift and go to state 7
    if_statement                   shift and go to state 8

state 1

    (0) S' -> comando .



state 2

    (1) comando -> reserva .

    $end            reduce using rule 1 (comando -> reserva .)


state 3

    (2) comando -> cancelamento .

    $end            reduce using rule 2 (comando -> cancelamento .)


state 4

    (3) comando -> consulta .

    $end            reduce using rule 3 (comando -> consulta .)


state 5

    (4) comando -> disponibilidade .

    $end            reduce using rule 4 (comando -> disponibilidade .)


state 6

    (5) comando -> batch .

    $end            reduce using rule 5 (comando -> batch .)


state 7

    (6) comando -> definicao .

    $end            reduce using rule 6 (comando -> definicao .)


state 8

    (7) comando -> if_statement .

    $end            reduce using rule 7 (comando -> if_statement .)


state 9

    (8) reserva -> RESERVAR . COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 16


state 10

    (9) cancelamento -> CANCELAR . COLON RESERVA_ID COLON NUMBER

    COLON           shift and go to state 17


state 11

    (10) consulta -> CONSULTA . COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID

    COLON           shift and go to state 18


state 12

    (11) disponibilidade -> DISPONIBILIDADE . COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 19


state 13

    (12) batch -> BATCH . COLON lista_comandos

    COLON           shift and go to state 20


state 14

    (19) definicao -> DEF . ID

    ID              shift and go to state 21


state 15

    (20) if_statement -> IF . expressao ELSE ID
    (21) expressao -> . NOT expressao
    (22) expressao -> . ID EQUALS ID
    (23) expressao -> . ID GREATER NUMBER
    (24) expressao -> . ID LESS NUMBER
    (25) expressao -> . ID GREATER_EQUAL NUMBER
    (26) expressao -> . ID LESS_EQUAL NUMBER
    (27) expressao -> . expressao AND expressao
    (28) expressao -> . expressao OR expressao

    NOT             shift and go to state 24
    ID              shift and go to state 23

    expressao                      shift and go to state 22

state 16

    (8) reserva -> RESERVAR COLON . TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    TIPO            shift and go to state 25


state 17

    (9) cancelamento -> CANCELAR COLON . RESERVA_ID COLON NUMBER

    RESERVA_ID      shift and go to state 26


state 18

    (10) consulta -> CONSULTA COLON . TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID

    TIPO            shift and go to state 27


state 19

    (11) disponibilidade -> DISPONIBILIDADE COLON . TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    TIPO            shift and go to state 28


state 20

    (12) batch -> BATCH COLON . lista_comandos
    (13) lista_comandos -> . comando_batch comando_batch
    (14) lista_comandos -> . lista_comandos comando_batch
    (15) comando_batch -> . reserva
    (16) comando_batch -> . cancelamento
    (17) comando_batch -> . consulta
    (18) comando_batch -> . disponibilidade
    (8) reserva -> . RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME
    (9) cancelamento -> . CANCELAR COLON RESERVA_ID COLON NUMBER
    (10) consulta -> . CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID
    (11) disponibilidade -> . DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    RESERVAR        shift and go to state 9
    CANCELAR        shift and go to state 10
    CONSULTA        shift and go to state 11
    DISPONIBILIDADE shift and go to state 12

    lista_comandos                 shift and go to state 29
    comando_batch                  shift and go to state 30
    reserva                        shift and go to state 31
    cancelamento                   shift and go to state 32
    consulta                       shift and go to state 33
    disponibilidade                shift and go to state 34

state 21

    (19) definicao -> DEF ID .

    $end            reduce using rule 19 (definicao -> DEF ID .)


state 22

    (20) if_statement -> IF expressao . ELSE ID
    (27) expressao -> expressao . AND expressao
    (28) expressao -> expressao . OR expressao

    ELSE            shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 23

    (22) expressao -> ID . EQUALS ID
    (23) expressao -> ID . GREATER NUMBER
    (24) expressao -> ID . LESS NUMBER
    (25) expressao -> ID . GREATER_EQUAL NUMBER
    (26) expressao -> ID . LESS_EQUAL NUMBER

    EQUALS          shift and go to state 38
    GREATER         shift and go to state 39
    LESS            shift and go to state 40
    GREATER_EQUAL   shift and go to state 41
    LESS_EQUAL      shift and go to state 42


state 24

    (21) expressao -> NOT . expressao
    (21) expressao -> . NOT expressao
    (22) expressao -> . ID EQUALS ID
    (23) expressao -> . ID GREATER NUMBER
    (24) expressao -> . ID LESS NUMBER
    (25) expressao -> . ID GREATER_EQUAL NUMBER
    (26) expressao -> . ID LESS_EQUAL NUMBER
    (27) expressao -> . expressao AND expressao
    (28) expressao -> . expressao OR expressao

    NOT             shift and go to state 24
    ID              shift and go to state 23

    expressao                      shift and go to state 43

state 25

    (8) reserva -> RESERVAR COLON TIPO . COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 44


state 26

    (9) cancelamento -> CANCELAR COLON RESERVA_ID . COLON NUMBER

    COLON           shift and go to state 45


state 27

    (10) consulta -> CONSULTA COLON TIPO . COLON ID PERIODO COLON DATE FILTRO COLON ID

    COLON           shift and go to state 46


state 28

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO . COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 47


state 29

    (12) batch -> BATCH COLON lista_comandos .
    (14) lista_comandos -> lista_comandos . comando_batch
    (15) comando_batch -> . reserva
    (16) comando_batch -> . cancelamento
    (17) comando_batch -> . consulta
    (18) comando_batch -> . disponibilidade
    (8) reserva -> . RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME
    (9) cancelamento -> . CANCELAR COLON RESERVA_ID COLON NUMBER
    (10) consulta -> . CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID
    (11) disponibilidade -> . DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    $end            reduce using rule 12 (batch -> BATCH COLON lista_comandos .)
    RESERVAR        shift and go to state 9
    CANCELAR        shift and go to state 10
    CONSULTA        shift and go to state 11
    DISPONIBILIDADE shift and go to state 12

    comando_batch                  shift and go to state 48
    reserva                        shift and go to state 31
    cancelamento                   shift and go to state 32
    consulta                       shift and go to state 33
    disponibilidade                shift and go to state 34

state 30

    (13) lista_comandos -> comando_batch . comando_batch
    (15) comando_batch -> . reserva
    (16) comando_batch -> . cancelamento
    (17) comando_batch -> . consulta
    (18) comando_batch -> . disponibilidade
    (8) reserva -> . RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME
    (9) cancelamento -> . CANCELAR COLON RESERVA_ID COLON NUMBER
    (10) consulta -> . CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID
    (11) disponibilidade -> . DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    RESERVAR        shift and go to state 9
    CANCELAR        shift and go to state 10
    CONSULTA        shift and go to state 11
    DISPONIBILIDADE shift and go to state 12

    comando_batch                  shift and go to state 49
    reserva                        shift and go to state 31
    cancelamento                   shift and go to state 32
    consulta                       shift and go to state 33
    disponibilidade                shift and go to state 34

state 31

    (15) comando_batch -> reserva .

    RESERVAR        reduce using rule 15 (comando_batch -> reserva .)
    CANCELAR        reduce using rule 15 (comando_batch -> reserva .)
    CONSULTA        reduce using rule 15 (comando_batch -> reserva .)
    DISPONIBILIDADE reduce using rule 15 (comando_batch -> reserva .)
    $end            reduce using rule 15 (comando_batch -> reserva .)


state 32

    (16) comando_batch -> cancelamento .

    RESERVAR        reduce using rule 16 (comando_batch -> cancelamento .)
    CANCELAR        reduce using rule 16 (comando_batch -> cancelamento .)
    CONSULTA        reduce using rule 16 (comando_batch -> cancelamento .)
    DISPONIBILIDADE reduce using rule 16 (comando_batch -> cancelamento .)
    $end            reduce using rule 16 (comando_batch -> cancelamento .)


state 33

    (17) comando_batch -> consulta .

    RESERVAR        reduce using rule 17 (comando_batch -> consulta .)
    CANCELAR        reduce using rule 17 (comando_batch -> consulta .)
    CONSULTA        reduce using rule 17 (comando_batch -> consulta .)
    DISPONIBILIDADE reduce using rule 17 (comando_batch -> consulta .)
    $end            reduce using rule 17 (comando_batch -> consulta .)


state 34

    (18) comando_batch -> disponibilidade .

    RESERVAR        reduce using rule 18 (comando_batch -> disponibilidade .)
    CANCELAR        reduce using rule 18 (comando_batch -> disponibilidade .)
    CONSULTA        reduce using rule 18 (comando_batch -> disponibilidade .)
    DISPONIBILIDADE reduce using rule 18 (comando_batch -> disponibilidade .)
    $end            reduce using rule 18 (comando_batch -> disponibilidade .)


state 35

    (20) if_statement -> IF expressao ELSE . ID

    ID              shift and go to state 50


state 36

    (27) expressao -> expressao AND . expressao
    (21) expressao -> . NOT expressao
    (22) expressao -> . ID EQUALS ID
    (23) expressao -> . ID GREATER NUMBER
    (24) expressao -> . ID LESS NUMBER
    (25) expressao -> . ID GREATER_EQUAL NUMBER
    (26) expressao -> . ID LESS_EQUAL NUMBER
    (27) expressao -> . expressao AND expressao
    (28) expressao -> . expressao OR expressao

    NOT             shift and go to state 24
    ID              shift and go to state 23

    expressao                      shift and go to state 51

state 37

    (28) expressao -> expressao OR . expressao
    (21) expressao -> . NOT expressao
    (22) expressao -> . ID EQUALS ID
    (23) expressao -> . ID GREATER NUMBER
    (24) expressao -> . ID LESS NUMBER
    (25) expressao -> . ID GREATER_EQUAL NUMBER
    (26) expressao -> . ID LESS_EQUAL NUMBER
    (27) expressao -> . expressao AND expressao
    (28) expressao -> . expressao OR expressao

    NOT             shift and go to state 24
    ID              shift and go to state 23

    expressao                      shift and go to state 52

state 38

    (22) expressao -> ID EQUALS . ID

    ID              shift and go to state 53


state 39

    (23) expressao -> ID GREATER . NUMBER

    NUMBER          shift and go to state 54


state 40

    (24) expressao -> ID LESS . NUMBER

    NUMBER          shift and go to state 55


state 41

    (25) expressao -> ID GREATER_EQUAL . NUMBER

    NUMBER          shift and go to state 56


state 42

    (26) expressao -> ID LESS_EQUAL . NUMBER

    NUMBER          shift and go to state 57


state 43

    (21) expressao -> NOT expressao .
    (27) expressao -> expressao . AND expressao
    (28) expressao -> expressao . OR expressao

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ELSE            reduce using rule 21 (expressao -> NOT expressao .)
    AND             shift and go to state 36
    OR              shift and go to state 37

  ! AND             [ reduce using rule 21 (expressao -> NOT expressao .) ]
  ! OR              [ reduce using rule 21 (expressao -> NOT expressao .) ]


state 44

    (8) reserva -> RESERVAR COLON TIPO COLON . ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    ID              shift and go to state 58


state 45

    (9) cancelamento -> CANCELAR COLON RESERVA_ID COLON . NUMBER

    NUMBER          shift and go to state 59


state 46

    (10) consulta -> CONSULTA COLON TIPO COLON . ID PERIODO COLON DATE FILTRO COLON ID

    ID              shift and go to state 60


state 47

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON . ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    ID              shift and go to state 61


state 48

    (14) lista_comandos -> lista_comandos comando_batch .

    RESERVAR        reduce using rule 14 (lista_comandos -> lista_comandos comando_batch .)
    CANCELAR        reduce using rule 14 (lista_comandos -> lista_comandos comando_batch .)
    CONSULTA        reduce using rule 14 (lista_comandos -> lista_comandos comando_batch .)
    DISPONIBILIDADE reduce using rule 14 (lista_comandos -> lista_comandos comando_batch .)
    $end            reduce using rule 14 (lista_comandos -> lista_comandos comando_batch .)


state 49

    (13) lista_comandos -> comando_batch comando_batch .

    RESERVAR        reduce using rule 13 (lista_comandos -> comando_batch comando_batch .)
    CANCELAR        reduce using rule 13 (lista_comandos -> comando_batch comando_batch .)
    CONSULTA        reduce using rule 13 (lista_comandos -> comando_batch comando_batch .)
    DISPONIBILIDADE reduce using rule 13 (lista_comandos -> comando_batch comando_batch .)
    $end            reduce using rule 13 (lista_comandos -> comando_batch comando_batch .)


state 50

    (20) if_statement -> IF expressao ELSE ID .

    $end            reduce using rule 20 (if_statement -> IF expressao ELSE ID .)


state 51

    (27) expressao -> expressao AND expressao .
    (27) expressao -> expressao . AND expressao
    (28) expressao -> expressao . OR expressao

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ELSE            reduce using rule 27 (expressao -> expressao AND expressao .)
    AND             shift and go to state 36
    OR              shift and go to state 37

  ! AND             [ reduce using rule 27 (expressao -> expressao AND expressao .) ]
  ! OR              [ reduce using rule 27 (expressao -> expressao AND expressao .) ]


state 52

    (28) expressao -> expressao OR expressao .
    (27) expressao -> expressao . AND expressao
    (28) expressao -> expressao . OR expressao

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ELSE            reduce using rule 28 (expressao -> expressao OR expressao .)
    AND             shift and go to state 36
    OR              shift and go to state 37

  ! AND             [ reduce using rule 28 (expressao -> expressao OR expressao .) ]
  ! OR              [ reduce using rule 28 (expressao -> expressao OR expressao .) ]


state 53

    (22) expressao -> ID EQUALS ID .

    ELSE            reduce using rule 22 (expressao -> ID EQUALS ID .)
    AND             reduce using rule 22 (expressao -> ID EQUALS ID .)
    OR              reduce using rule 22 (expressao -> ID EQUALS ID .)


state 54

    (23) expressao -> ID GREATER NUMBER .

    ELSE            reduce using rule 23 (expressao -> ID GREATER NUMBER .)
    AND             reduce using rule 23 (expressao -> ID GREATER NUMBER .)
    OR              reduce using rule 23 (expressao -> ID GREATER NUMBER .)


state 55

    (24) expressao -> ID LESS NUMBER .

    ELSE            reduce using rule 24 (expressao -> ID LESS NUMBER .)
    AND             reduce using rule 24 (expressao -> ID LESS NUMBER .)
    OR              reduce using rule 24 (expressao -> ID LESS NUMBER .)


state 56

    (25) expressao -> ID GREATER_EQUAL NUMBER .

    ELSE            reduce using rule 25 (expressao -> ID GREATER_EQUAL NUMBER .)
    AND             reduce using rule 25 (expressao -> ID GREATER_EQUAL NUMBER .)
    OR              reduce using rule 25 (expressao -> ID GREATER_EQUAL NUMBER .)


state 57

    (26) expressao -> ID LESS_EQUAL NUMBER .

    ELSE            reduce using rule 26 (expressao -> ID LESS_EQUAL NUMBER .)
    AND             reduce using rule 26 (expressao -> ID LESS_EQUAL NUMBER .)
    OR              reduce using rule 26 (expressao -> ID LESS_EQUAL NUMBER .)


state 58

    (8) reserva -> RESERVAR COLON TIPO COLON ID . ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    ESPACO          shift and go to state 62


state 59

    (9) cancelamento -> CANCELAR COLON RESERVA_ID COLON NUMBER .

    $end            reduce using rule 9 (cancelamento -> CANCELAR COLON RESERVA_ID COLON NUMBER .)
    RESERVAR        reduce using rule 9 (cancelamento -> CANCELAR COLON RESERVA_ID COLON NUMBER .)
    CANCELAR        reduce using rule 9 (cancelamento -> CANCELAR COLON RESERVA_ID COLON NUMBER .)
    CONSULTA        reduce using rule 9 (cancelamento -> CANCELAR COLON RESERVA_ID COLON NUMBER .)
    DISPONIBILIDADE reduce using rule 9 (cancelamento -> CANCELAR COLON RESERVA_ID COLON NUMBER .)


state 60

    (10) consulta -> CONSULTA COLON TIPO COLON ID . PERIODO COLON DATE FILTRO COLON ID

    PERIODO         shift and go to state 63


state 61

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID . DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    DATA            shift and go to state 64


state 62

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO . COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 65


state 63

    (10) consulta -> CONSULTA COLON TIPO COLON ID PERIODO . COLON DATE FILTRO COLON ID

    COLON           shift and go to state 66


state 64

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA . COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 67


state 65

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON . STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    STRING          shift and go to state 68


state 66

    (10) consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON . DATE FILTRO COLON ID

    DATE            shift and go to state 69


state 67

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON . DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    DATE            shift and go to state 70


state 68

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING . DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    DATA            shift and go to state 71


state 69

    (10) consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE . FILTRO COLON ID

    FILTRO          shift and go to state 72


state 70

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE . HORA_INICIO COLON TIME HORA_FIM COLON TIME

    HORA_INICIO     shift and go to state 73


state 71

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA . COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 74


state 72

    (10) consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO . COLON ID

    COLON           shift and go to state 75


state 73

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO . COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 76


state 74

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON . DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME

    DATE            shift and go to state 77


state 75

    (10) consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON . ID

    ID              shift and go to state 78


state 76

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON . TIME HORA_FIM COLON TIME

    TIME            shift and go to state 79


state 77

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE . HORA_INICIO COLON TIME HORA_FIM COLON TIME

    HORA_INICIO     shift and go to state 80


state 78

    (10) consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID .

    $end            reduce using rule 10 (consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID .)
    RESERVAR        reduce using rule 10 (consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID .)
    CANCELAR        reduce using rule 10 (consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID .)
    CONSULTA        reduce using rule 10 (consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID .)
    DISPONIBILIDADE reduce using rule 10 (consulta -> CONSULTA COLON TIPO COLON ID PERIODO COLON DATE FILTRO COLON ID .)


state 79

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME . HORA_FIM COLON TIME

    HORA_FIM        shift and go to state 81


state 80

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO . COLON TIME HORA_FIM COLON TIME

    COLON           shift and go to state 82


state 81

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM . COLON TIME

    COLON           shift and go to state 83


state 82

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON . TIME HORA_FIM COLON TIME

    TIME            shift and go to state 84


state 83

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON . TIME

    TIME            shift and go to state 85


state 84

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME . HORA_FIM COLON TIME

    HORA_FIM        shift and go to state 86


state 85

    (11) disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME .

    $end            reduce using rule 11 (disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME .)
    RESERVAR        reduce using rule 11 (disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME .)
    CANCELAR        reduce using rule 11 (disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME .)
    CONSULTA        reduce using rule 11 (disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME .)
    DISPONIBILIDADE reduce using rule 11 (disponibilidade -> DISPONIBILIDADE COLON TIPO COLON ID DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON TIME .)


state 86

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM . COLON TIME

    COLON           shift and go to state 87


state 87

    (8) reserva -> RESERVAR COLON TIPO COLON ID ESPACO COLON STRING DATA COLON DATE HORA_INICIO COLON TIME HORA_FIM COLON . TIME

    TIME            shift and go to state 88


state 88
